--- a/static/contactus.html
+++ b/static/contactus.html
@@ -148,6 +148,10 @@ div.desc {
 		 <div class="desc">AKSHAY PARALIKAR</div>
 	</div>
 	<div class="img" width="100" height="170">
+		 <a><img src="../static/images/manvantara/AMITH_ASHTAGI.jpg" width="100" height="150"></a>
+		 <div class="desc">AMITH ASHTAGI</div>
+	</div>
+	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/ARUN_KUMAR.jpg" width="100" height="150"></a>
 		 <div class="desc">ARUN KUMAR</div>
 	</div>
@@ -184,12 +188,20 @@ div.desc {
 		 <div class="desc">GIDEON</div>
 	</div>
 	<div class="img" width="100" height="170">
-		 <a><img src="../static/images/manvantara/NITIN_YALAMOORI.jpg" width="100" height="150"></a>
-		 <div class="desc">NITIN YALAMOORI</div>
-	</div>
-	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/NATRAJ_B_S.jpg" width="100" height="150"></a>
 		 <div class="desc">NATRAJ B S</div>
+	</div>
+	<div class="img" width="100" height="170">
+		 <a><img src="../static/images/manvantara/NAVEEN_GILDA.jpg" width="100" height="150"></a>
+		 <div class="desc">Er.NAVEEN GILDA</div>
+	</div>
+	<div class="img" width="100" height="170">
+		 <a><img src="../static/images/manvantara/NISHANTH_NOOLA.jpg" width="100" height="150"></a>
+		 <div class="desc">Er.NISHANTH NOOLA</div>
+	</div>
+	<div class="img" width="100" height="170">
+		 <a><img src="../static/images/manvantara/NITIN_YALAMOORI.jpg" width="100" height="150"></a>
+		 <div class="desc">NITIN YALAMOORI</div>
 	</div>
 	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/PARTHIBAN_LOGANATHAN.jpg" width="100" height="150"></a>
@@ -234,6 +246,10 @@ div.desc {
 	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/SACHIN_KUPATI.jpg" width="100" height="150"></a>
 		 <div class="desc">SACHIN KUPATI</div>
+	</div>
+	<div class="img" width="100" height="170">
+		 <a><img src="../static/images/manvantara/SANGAMESH.jpg" width="100" height="150"></a>
+		 <div class="desc">SANGAMESH</div>
 	</div>
 	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/SANJEEV_DESHPANDE.jpg" width="100" height="150"></a>
@@ -282,7 +298,7 @@ div.desc {
 	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/YASHAS_GOWDA.jpg" width="100" height="150"></a>
 		 <div class="desc">YASHAS GOWDA</div>
-	</div>		
+	</div>
 </br></br></br></br>
 </div>
 <footer><!-- Defining the footer section of the page -->
