--- a/static/contactus.html
+++ b/static/contactus.html
@@ -113,7 +113,7 @@ div.desc {
 				MOB:+91-9449345992
 		</td>
 	</tr>
-		<tr>
+	<tr>
 		<td>
 			<div class="img">
 			<a><img src="../static/images/manvantara/PRASHANTH_MULGE.jpg" width="150" height="200"></a>
@@ -134,6 +134,28 @@ div.desc {
 			MS(ELECTRONICS)</br>
 			Student at Stony Brook University, New York</br>
 			mail id: vardiprasanna@gmail.com</br>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<div class="img">
+			<a><img src="../static/images/manvantara/PRAMOD_KUMAR.jpg" width="150" height="200"></a>
+			</div>
+		</td>
+		<td>Dr.Pramod Kumar</br>
+				M.B.B.S, M S</br>
+				(Health Care) </br>
+		</td>
+		<td>
+			<div class="img">
+			<a><img src="../static/images/manvantara/MANISH_VAIKUNTH.jpg" width="150" height="200"></a>
+			</div>
+		</td>
+		<td>Blessings From Our GURU</br>
+			Er. Manish Vaikunth</br>
+			BE(Civil),.MIE.,FIV</br>
+			Consulting Engineer</br>
+			Vilttal Nagar, Gulbarga-585102</br>
 		</td>
 	</tr>
 	</table>
@@ -206,10 +228,6 @@ div.desc {
 	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/PARTHIBAN_LOGANATHAN.jpg" width="100" height="150"></a>
 		 <div class="desc">PARTHIBAN LOGANATHAN</div>
-	</div>
-	<div class="img" width="100" height="170">
-		 <a><img src="../static/images/manvantara/PRAMOD_KUMAR.jpg" width="100" height="150"></a>
-		 <div class="desc">PRAMOD KUMAR</div>
 	</div>
 	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/RAGHAVENDRA_DONTHI.jpg" width="100" height="150"></a>
