Fix the galeery issue

--- a/static/gallery.html
+++ b/static/gallery.html
@@ -84,27 +84,27 @@ div.desc {
 
 <div class="img">
  <a><img src="../static/images/image1.jpg" width="300" height="200"></a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"></div>
 </div>
 <div class="img">
  <a><img src="../static/images/image2.jpg" width="300" height="200"></a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"></div>
 </div>
 <div class="img">
  <a><img src="../static/images/image3.jpg" width="300" height="200"></a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"></div>
 </div>
 <div class="img">
  <a><img src="../static/images/image4.jpg" width="300" height="200"></a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"></div>
 </div>
 <div class="img">
  <a><img src="../static/images/image5.jpg" width="300" height="200"></a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"></div>
 </div>
 <div class="img">
  <a><img src="../static/images/image6.jpg" width="300" height="200"></a>
- <div class="desc">Add a description of the image here</div>
+ <div class="desc"></div>
 </div>
 </div>
 <footer><!-- Defining the footer section of the page -->
