adding new member

--- a/static/contactus.html
+++ b/static/contactus.html
@@ -210,6 +210,10 @@ div.desc {
 		 <div class="desc">GIDEON</div>
 	</div>
 	<div class="img" width="100" height="170">
+		<a><img src="../static/images/manvantara/KIRAN_MATGOL.jpg" width="100" height="150"></a>
+		 <div class="desc">KIRAN MATGOL</div>
+	</div>
+	<div class="img" width="100" height="170">
 		 <a><img src="../static/images/manvantara/NATRAJ_B_S.jpg" width="100" height="150"></a>
 		 <div class="desc">NATRAJ B S</div>
 	</div>
