--- a/static/feedback.html
+++ b/static/feedback.html
@@ -1,111 +1,128 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="content-type" content="text/html" charset="utf-8" >
+    <meta http-equiv="content-type" content="text/html" charset="utf-8">
     <title>Manvantara Foundations</title>
     <!-- IE -->
     <link rel="shortcut icon" href="../static/images/m.jpg" type="image/x-icon" />
     <!-- other browsers -->
-    <link rel="icon" href="../static/images/m.jpg" type="image/x-icon"/>
+    <link rel="icon" href="../static/images/m.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="../static/css/general.css" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="../static/css/general.css" />
-	<script type="text/javascript" src="../static/js/general.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/css/general.css" />
+    <script type="text/javascript" src="../static/js/general.js"></script>
+    <script>
+        function myFunction() {
+
+            name = document.getElementById("first_name").value;
+            window.alert("Thanks " + name + ". Your feedback submitted");
+        }
+    </script>
 </head>
+
 <body>
 
- <header><!-- Defining the header section of the page -->
-    <div class="header">
-        <div class="social_icons">
-            <a href="https://www.facebook.com/groups/Manvantara.foundations" target="_blank" title="Facebook"><img alt="" src="../static/images/facebook.png"></a>
-            <a href="https://twitter.com/" target="_blank" title="Twitter"><img alt="" src="../static/images/twitter.png"></a>
-            <a href="#" title="RSS"><img alt="" src="../static/images/rss.png"></a>
+    <header>
+        <!-- Defining the header section of the page -->
+        <div class="header">
+            <div class="social_icons">
+                <a href="https://www.facebook.com/groups/Manvantara.foundations" target="_blank" title="Facebook"><img alt="" src="../static/images/facebook.png"></a>
+                <a href="https://twitter.com/" target="_blank" title="Twitter"><img alt="" src="../static/images/twitter.png"></a>
+                <a href="#" title="RSS"><img alt="" src="../static/images/rss.png"></a>
+            </div>
+            <div class="search">
+                <form action="" method="get">
+                    <input type="text" name="q" value="" />
+                    <input type="submit" value="search" />
+                </form>
+            </div>
+            <div class="clear"></div>
         </div>
-        <div class="search">
-            <form action="" method="get">
-                <input type="text" name="q" value="" />
-                <input type="submit" value="search" />
-            </form>
-        </div>
-        <div class="clear"></div>
-    </div>
-</header>
+    </header>
 
-<!-- Defining main logo -->
-<!-- <div class="logo">
+    <!-- Defining main logo -->
+    <!-- <div class="logo">
     <a href="" title="Anime theme"><img src="images/logo.png" /></a>
 </div> -->
-  
+
     <div align="justify" class="fullpage">
-	<div class="main-inner1">
-<!-- 		<h1 class="logo">
+        <div class="main-inner1">
+            <!-- 		<h1 class="logo">
 			<a href="./manvantara.html" title="VIDYAPOSHAK"></a>
 		</h1> -->
-		<h1 style="font-family:Courier New">Manvantara Foundations (NGO)</br>(Join Hands For Better Future)</h1>
-		<div class="menubar">
-		<nav>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/gallery">Gallery</a></li>
-				<li><a href="/contactus">Contact Us</a></li>
-				<li><a href="/aboutus">About Us</a></li>
-				<li><a href="/feedback">Feedback</a></li>
-			</ul>
-		</nav>
-		</div>
-	</div>
-	<table width="450px">
-	<tr height="30px"></tr>
-	<tr height="30px">
-		<td valign="top">
-			<label for="first_name">First Name *</label>
-		</td>
-		<td valign="top">
-			<input  type="text" name="first_name" maxlength="50" size="30" placeholder="First name">
-		</td>
-	</tr>
- 
-	<tr height="30px">
-		<td valign="top"">
-			<label for="last_name">Last Name *</label>
-		</td>
-		<td valign="top">
-			<input  type="text" name="last_name" maxlength="50" size="30" placeholder="Last name">
-		</td>
-	</tr>
-	<tr height="30px">
-		<td valign="top">
-			<label for="email">Email Address *</label>
-		</td>
-		<td valign="top">
-			<input  type="text" name="email" maxlength="80" size="30" placeholder="Email Address">
-		</td>
-	</tr>
-	<tr height="30px">
-		<td valign="top">
-			<label for="telephone">Telephone Number</label>
-		</td>
-		<td valign="top">
-			<input  type="text" name="telephone" maxlength="30" size="30" placeholder="Phone Number">
-		</td>
-	</tr>
-	<tr height="30px">
-		<td valign="top">
-			<label for="comments">Comments *</label>
-		</td>
-		<td valign="top">
-			<textarea  name="comments" maxlength="1000" cols="31" rows="6" placeholder="Add your comment here"></textarea>
-		</td>
-	</tr>
-	<tr height="30px">
-		<td colspan="2" style="text-align:center">
-			<input type="submit" value="Submit">
-		</td>
-	</tr>
-	</table>
-	</br></br></br></br></br></br>
-</div>
-<footer><!-- Defining the footer section of the page -->
-    <div>&copy; 2015 &nbsp;:&nbsp; Privacy <font size="2"> (PRASHANTH MULGE)</font></div>
-</footer>
+            <h1 style="font-family:Courier New">Manvantara Foundations (NGO)</br>(Join Hands For Better Future)</h1>
+            <div class="menubar">
+                <nav>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/gallery">Gallery</a></li>
+                        <li><a href="/contactus">Contact Us</a></li>
+                        <li><a href="/aboutus">About Us</a></li>
+                        <li><a href="/feedback">Feedback</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <table width="450px">
+            <tr height="30px"></tr>
+            <tr height="30px">
+                <td valign="top">
+                    <label for="first_name">First Name *</label>
+                </td>
+                <td valign="top">
+                    <input id="first_name" type="text" name="first_name" maxlength="50" size="30" placeholder="First name">
+                </td>
+            </tr>
+
+            <tr height="30px">
+                <td valign="top">
+                    <label for="last_name">Last Name *</label>
+                </td>
+                <td valign="top">
+                    <input id="last_name" type="text" name="last_name" maxlength="50" size="30" placeholder="Last name">
+                </td>
+            </tr>
+            <tr height="30px">
+                <td valign="top">
+                    <label for="email">Email Address *</label>
+                </td>
+                <td valign="top">
+                    <input id="email" type="text" name="email" maxlength="80" size="30" placeholder="Email Address">
+                </td>
+            </tr>
+            <tr height="30px">
+                <td valign="top">
+                    <label for="telephone">Telephone Number</label>
+                </td>
+                <td valign="top">
+                    <input id="telephone" type="text" name="telephone" maxlength="30" size="30" placeholder="Phone Number">
+                </td>
+            </tr>
+            <tr height="30px">
+                <td valign="top">
+                    <label for="comments">Comments *</label>
+                </td>
+                <td valign="top">
+                    <textarea id="comments" name="comments" maxlength="1000" cols="31" rows="6" placeholder="Add your comment here"></textarea>
+                </td>
+            </tr>
+            <tr height="30px">
+                <td colspan="2" style="text-align:center">
+                    <input type="submit" value="Submit" onclick="myFunction()">
+                </td>
+            </tr>
+        </table>
+        </br>
+        </br>
+        </br>
+        </br>
+        </br>
+        </br>
+    </div>
+    <footer>
+        <!-- Defining the footer section of the page -->
+        <div>&copy; 2015 &nbsp;:&nbsp; Privacy <font size="2"> (PRASHANTH MULGE)</font></div>
+    </footer>
 </body>
+
 </html>
